Switched to GLFW3.

--- a/src/playback/Makefile
+++ b/src/playback/Makefile
@@ -1,5 +1,5 @@
 make: player.o
-	gcc -g -o player player.c simulation.c -lm -lglut -lGLU -lGL
-	
+	g++ -g -o player player.c simulation.c -lGL -lGLU -lglfw3 -lX11 -lXxf86vm -lXrandr -lpthread -lXi -ldl -lXinerama -lXcursor
+
 clean:
 	rm *.o player
