Transitioned over to GLFW, added basic shading.

--- a/src/playback/Makefile
+++ b/src/playback/Makefile
@@ -1,5 +1,6 @@
-make: player.o
-	g++ -g -o player player.c simulation.c -lGL -lGLU -lglfw3 -lX11 -lXxf86vm -lXrandr -lpthread -lXi -ldl -lXinerama -lXcursor
+make:
+	g++ -g -c player.c -lGL -lGLU -lglfw3 -lX11 -lXxf86vm -lXrandr -lpthread -lXi -ldl -lXinerama -lXcursor -DGL_GLEXT_PROTOTYPES
+	g++ player.o -g -o player simulation.c shader.c common.c -lGL -lGLU -lglfw3 -lX11 -lXxf86vm -lXrandr -lpthread -lXi -ldl -lXinerama -lXcursor -DGL_GLEXT_PROTOTYPES
 
 clean:
 	rm *.o player
