--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ src/playback/10ksquare3600f.sim
 .vscode/settings.json
 .vscode/targets.log
 src/sim/big.sim
+src/playback/test.sim
+src/sim/10k3600.sim
+src/sim/test.sim
