--- a/src/sim/test.config
+++ b/src/sim/test.config
@@ -1,8 +1,7 @@
 # example configuration file
-    work_groups:    4096 
-invocations: 512    
-  particle_size: 5
-
-g:  0.001f
-
-n: 10000
+work_groups: 4096
+invocations: 512
+particle_size: 5
+g: 0.1f
+n: 200000
+frames: 500
