--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
-src/playback/10ksquare3600f.sim
 .vscode/configurationCache.log
 .vscode/dryrun.log
 .vscode/settings.json
 .vscode/targets.log
-src/sim/40k12ksq.sim
-src/sim/circle.sim
-src/sim/test.sim
-src/sim/test2.sim
+.gitignore
+src/test.sim
